# benchblock

./: .gitignore  Cargo.toml  bench.sh  gen-file.sh  run.sh
benches/: .~lock.read-bytes-bench-analysis.ods#  read-bytes-bench-analysis.ods  read-bytes.csv  read-string-bench-analysis.ods  read-string.csv  reqwest-bench.csv
src/: lib.rs
