[package]
name = "benchblock"
version = "0.1.0"
authors = ["cosine <trash@cosine.online>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10", features = ["blocking"]}
tokio = {version = "0.2", features = ["macros", "rt-threaded"]}
